// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unordered list Default renders correctly 1`] = `
<jest>
  <ul
    class="ecl-unordered-list"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Duis commodo nibh eget magna tincidunt, in volutpat diam consequat. Nulla in blandit leo. Quisque ultricies molestie porta
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Phasellus suscipit eu augue nec suscipit
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Nam dignissim condimentum pulvinar. Nullam volutpat tortor vel turpis iaculis feugiat. Vivamus eget turpis a est lacinia blandit. Suspendisse tellus lorem, aliquam at ante quis, dignissim iaculis lectus. Duis pellentesque neque faucibus convallis scelerisque
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Vestibulum sed accumsan ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Morbi vitae tortor accumsan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Nulla facilisi
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Phasellus in metus et libero scelerisque sagittis sollicitudin at lectus
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with divider variant 1`] = `
<jest>
  <ul
    class="ecl-unordered-list ecl-unordered-list--divider"
  >
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Duis commodo nibh eget magna
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Phasellus suscipit
          </a>
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Nam dignissim condimentum pulvinar. Nullam volutpat tortor vel turpis iaculis feugiat. Vivamus eget turpis a est lacinia blandit
      </a>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      <a
        class="ecl-link"
        href="/example"
      >
        Vestibulum sed accumsan ipsum
      </a>
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Morbi vitae tortor accumsan
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Nulla facilisi
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Phasellus in metus et libero scelerisque sagittis sollicitudin at lectus
          </a>
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with extra attributes 1`] = `
<jest>
  <ul
    class="ecl-unordered-list"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Duis commodo nibh eget magna tincidunt, in volutpat diam consequat. Nulla in blandit leo. Quisque ultricies molestie porta
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Phasellus suscipit eu augue nec suscipit
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Nam dignissim condimentum pulvinar. Nullam volutpat tortor vel turpis iaculis feugiat. Vivamus eget turpis a est lacinia blandit. Suspendisse tellus lorem, aliquam at ante quis, dignissim iaculis lectus. Duis pellentesque neque faucibus convallis scelerisque
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Vestibulum sed accumsan ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Morbi vitae tortor accumsan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Nulla facilisi
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Phasellus in metus et libero scelerisque sagittis sollicitudin at lectus
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with extra class names 1`] = `
<jest>
  <ul
    class="ecl-unordered-list custom-class custom-class--test"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Duis commodo nibh eget magna tincidunt, in volutpat diam consequat. Nulla in blandit leo. Quisque ultricies molestie porta
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Phasellus suscipit eu augue nec suscipit
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Nam dignissim condimentum pulvinar. Nullam volutpat tortor vel turpis iaculis feugiat. Vivamus eget turpis a est lacinia blandit. Suspendisse tellus lorem, aliquam at ante quis, dignissim iaculis lectus. Duis pellentesque neque faucibus convallis scelerisque
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Vestibulum sed accumsan ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          Morbi vitae tortor accumsan
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Nulla facilisi
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Phasellus in metus et libero scelerisque sagittis sollicitudin at lectus
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;

exports[`Unordered list Default renders correctly with no-bullet variant 1`] = `
<jest>
  <ul
    class="ecl-unordered-list ecl-unordered-list--no-marker"
  >
    <li
      class="ecl-unordered-list__item"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Duis commodo nibh eget magna
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Phasellus suscipit
          </a>
        </li>
      </ul>
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Nam dignissim condimentum pulvinar. Nullam volutpat tortor vel turpis iaculis feugiat. Vivamus eget turpis a est lacinia blandit
    </li>
    <li
      class="ecl-unordered-list__item"
    >
      Vestibulum sed accumsan ipsum
      <ul
        class="ecl-unordered-list"
      >
        <li
          class="ecl-unordered-list__item"
        >
          <a
            class="ecl-link"
            href="/example"
          >
            Morbi vitae tortor accumsan
          </a>
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Nulla facilisi
        </li>
        <li
          class="ecl-unordered-list__item"
        >
          Phasellus in metus et libero scelerisque sagittis sollicitudin at lectus
        </li>
      </ul>
    </li>
  </ul>
</jest>
`;
